Revert "Fix alignment of group actions (#474)"
This reverts commit 70a6a0211902c300d8af200e62d09ca063c7d02e.

--- a/app/styles/pages/_groups.scss
+++ b/app/styles/pages/_groups.scss
@@ -366,9 +366,6 @@
       position: absolute;
       top: 20px;
       right: 30px;
-      .stream-item-options {
-        margin-right: 0;
-      }
     }
   }
 }
